s14 fondu image video

--- a/index.htm
+++ b/index.htm
@@ -70,6 +70,7 @@
                     <h2> Les plus belles fleurs du Canada </h2>
 
                     <h5>Auteur: Camila Tiemi Shiozuka Rezende</h5>
+                    <a class="mon__site" href="https://ctsrezende-ship-it.github.io/TP2_1W1/">Mon Github</a>
 
                     <h6>
                         Le Canada abrite une riche diversité de fleurs roses, qui sont non seulement e
