--- a/index.htm
+++ b/index.htm
@@ -106,7 +106,7 @@
     </div>
 
     <div>
-        <section id="inscription" class="un centre">
+        <section id="inscription" class="un centre__inscription">
             <h2>Inscription</h2>
             <a class="les__fleurs" href="#">Les fleurs</a>
 
@@ -153,7 +153,7 @@
     </div>
 
     <div>
-        <section id="tableau" class="deux centre">
+        <section id="tableau" class="deux centre__tableau">
             <h2>Tableau</h2>
             <a class="les__fleurs" href="#">Les fleurs</a>
 
