Change flower name

--- a/index.htm
+++ b/index.htm
@@ -459,7 +459,7 @@
                                 </figure>
 
                                 <div class="texte">
-                                    <h3  class="principal__h3__droite">Laurier-rose</h3>
+                                    <h3  class="principal__h3__droite">Hibiscus</h3>
                                     <p class="principal__p__droite">
                                         <b>
                                             L’hibiscus est une plante très prisée pour ses grandes fleurs spectaculaires et 
